--- a/src/parts/components/AboutMe/AboutMe.module.scss
+++ b/src/parts/components/AboutMe/AboutMe.module.scss
@@ -4,7 +4,7 @@
   margin-bottom: 128px;
 }
 
-.about__content {
+.content {
   padding: 24px;
   background-color: #1C1E22;
   border-radius: 8px;
@@ -13,45 +13,36 @@
   max-width: 970px;
 }
 
-.about__left {
+.left {
   margin-right: 32px;
-  height: 100%;
 }
 
-.about__right {
+.right {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.about__text {
+.text {
   line-height: 1.75;
   letter-spacing: 0.44px;
 }
 
-.about__button-container {
+.buttonContainer {
   width: 200px;
 }
 
-.button__image--right {
-  margin-left: 10px;
-}
-
-.margin-bottom--32 {
-  margin-bottom: 32px;
-}
-
 @media (max-width: 850px) {
-  .about__content {
+  .content {
     flex-direction: column;
     align-items: center;
   }
 
-  .about__left {
+  .left {
     margin-right: 0;
   }
 
-  .about__right {
+  .right {
     margin-top: 24px;
   }
 }
