update Final Version
Have finished developing website

--- a/src/parts/components/Footer/Footer.scss
+++ b/src/parts/components/Footer/Footer.scss
@@ -13,6 +13,11 @@
   flex-direction: column;
 }
 
+.footer__title,
+.footer__menu-item {
+  text-decoration: none;
+}
+
 .footer__menu-item {
   margin-top: 24px;
 }
