--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 
 body {
   color: #fff;
+  background-image: url("./assets/images/body.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .heading__1 {
