--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -16,12 +16,25 @@
   width: 100%;
 }
 
+.about__right {
+}
+
 .heading__1--mobile {
   text-align: left;
 }
 
 .about__text {
   line-height: 1.4;
+}
+
+.about__link {
+  text-decoration: none;
+  color: #4974a5;
+  transition: color 0.3s ease-out;
+
+  &:hover {
+    color: #ccc;
+  }
 }
 
 .skills {
@@ -48,13 +61,6 @@
   line-height: 1.75;
 }
 
-@media (max-width: 1190px) {
-  .about__content {
-    grid-template-columns: 360px 1fr;
-    gap: 70px 0;
-  }
-}
-
 @media (max-width: 1270px) {
   .about__content {
     gap: 0 70px;
@@ -67,6 +73,17 @@
   }
 }
 
+@media (max-width: 1190px) {
+  .about__text {
+    font-size: 0.8em;
+  }
+
+  .about__content {
+    grid-template-columns: 360px 1fr;
+    gap: 70px 0;
+  }
+}
+
 @media (max-width: 1165px) {
   .margin-bottom--32 {
     margin-bottom: 16px;
@@ -76,13 +93,11 @@
   }
 }
 
-@media (max-width: 998px) {
-  .about__content {
-    grid-template-columns: 330px auto;
-  }
-}
-
 @media (max-width: 787px) {
+  .about__text {
+    font-size: 1em;
+  }
+
   .about__content {
     grid-template-columns: 1fr;
     justify-content: center;
